@@ -1,3 +1,8 @@
+2005-08-15  Mike Kestner  <mkestner@novell.com>
+
+	* sample/opaquetest/Makefile.am : make clean fixes
+	* sample/valtest/Makefile.am : make clean fixes
+
 2005-08-15  Dan Winship  <danw@novell.com>
 
 	* sample/opaquetest/Makefile.am (EXTRA_DIST): add missing files
